# blazeyai

./: .gitignore
LivePortrait/: MINI PROJECTS.lnk
LivePortrait/SadTalker/: videos.txt
ai-video-agent/: .env.example  README.md  api.py  main.py  pyproject.toml  scenes.json  test_models.py  veo_test.py
ai-video-agent/add/: pyproject.toml
ai-video-agent/agents/: avatar_agent.py  image_agent.py  pdf_agent.py  planner.py  slide_agent.py  video_agent.py  video_agent_backup.py  voice_agent.py
ai-video-agent/data/: content.txt  scenes.json
blazly-web/: index.html  package-lock.json  package.json  tailwind.config.js
blazly-web/src/: App.jsx
