[project]
name = "ai-video-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "gtts>=2.5.4",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "pypdf>=6.13.3",
    "requests>=2.34.2",
]
